Feature/outlined input (#1761)
* Create outlined input option for material

* Style text input, text area and all derived widgets without outlined time, standardize default as well

* Support dark material theme

* Update other themes

* Unwrap input to better support material theme

* Update styles for chip typeahead

* make outline stuff work properly

* fix tests

* pass active classes

* nearly there

* fix outlined chip typeahead

* fix tests

* adjust margin

* adjust top

* rename default to filled

* rename labels, remove pseudo

* remove underscore

Co-authored-by: Daniel Lautzenheiser <lautzd@gmail.com>

--- a/src/theme/default/chip-typeahead.m.css
+++ b/src/theme/default/chip-typeahead.m.css
@@ -34,10 +34,6 @@
 .input {
 }
 
-/* Class of the input wrapper on the typeaheads Input widget */
-.inputWrapper {
-}
-
 /* Class on the input label */
 .label {
 }
@@ -58,6 +54,35 @@
 .hasLabel {
 }
 
+/* Added if the widget does not have a label */
+.noLabel {
+}
+
 /* Added to the input's leading content containing chips */
+.inputLeadingWrapper {
+}
+
 .inputLeading {
+}
+
+/* Added to the input's wrapper content if kind is default */
+.defaultKind {
+}
+
+/* Added to the input's wrapper content if kind is outlined */
+.outlinedKind {
+}
+
+/* Added to the input's label content */
+.inputLabel {
+}
+
+/* Added to the label's content */
+.label {
+}
+
+.labelActive {
+}
+
+.notchActive {
 }
