--- a/src/theme/material/variants/dark.m.css
+++ b/src/theme/material/variants/dark.m.css
@@ -65,6 +65,12 @@
 	--mdc-avatar-size-medium: 40px;
 	--mdc-avatar-size-large: 56px;
 
+	/* ripple */
+	--mdc-ripple-color: hsla(0, 0%, 100%, 0.87);
+
+	/* Text Input */
+	--mdc-text-input-background: var(--mdc-theme-on-surface);
+
 	/* Checkbox */
 	--mdc-checkbox-background-enabled: transparent;
 	--mdc-checkbox-background-checked: var(--mdc-theme-secondary);
